# valley

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  Dockerfile  docker-compose.yml  ordem_telegram.md  ordem_universal.md  package-lock.json  package.json  valley  valley.pub  valley_mapbox_tracking_specification.md  vercel.json
.codex/: config.toml
.playwright-cli/: page-2026-04-28T15-28-59-866Z.yml  page-2026-04-29T16-26-35-794Z.yml  page-2026-04-29T16-27-47-753Z.yml  page-2026-04-29T16-28-30-423Z.yml  page-2026-04-29T16-29-07-769Z.yml  page-2026-04-29T16-32-20-256Z.yml  page-2026-04-29T16-33-02-079Z.yml  page-2026-04-29T16-33-36-762Z.yml  page-2026-04-29T16-34-10-992Z.yml  page-2026-05-13T12-09-57-425Z.yml  page-2026-05-13T12-57-02-658Z.yml  page-2026-05-13T13-01-47-652Z.yml  page-2026-05-13T13-02-44-956Z.yml  page-2026-05-13T13-03-18-534Z.yml  page-2026-05-13T13-03-38-650Z.yml  page-2026-05-13T13-03-58-162Z.yml  page-2026-05-13T13-04-39-714Z.yml  page-2026-05-13T13-05-01-261Z.yml  page-2026-05-13T13-05-30-038Z.yml  page-2026-05-13T13-05-42-053Z.yml  page-2026-05-13T13-06-16-651Z.yml  page-2026-05-13T13-06-31-323Z.yml  page-2026-05-13T13-06-49-972Z.yml  page-2026-05-13T13-06-59-255Z.yml  page-2026-05-13T13-07-19-311Z.yml  page-2026-05-13T13-07-39-615Z.yml  page-2026-05-13T13-08-05-040Z.yml  page-2026-05-13T13-08-14-575Z.yml  page-2026-05-13T13-08-39-825Z.yml  page-2026-05-13T13-08-48-274Z.yml  page-2026-05-13T13-10-21-761Z.yml  (+2 more)
apps/valley-admin-windows/src-tauri/: Cargo.toml  tauri.conf.json
apps/valley-admin-windows/src-tauri/src/: main.rs
(+1276 files in other folders)
