[package]
name = "valley_admin_windows"
version = "0.1.0"
description = "Valley Admin - Painel Master Windows"
authors = ["Ecossistema Nexora"]
edition = "2021"

[lib]
name = "valley_admin_windows_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
